// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`FulfillmentChecklist > RTL snapshot tests > matches snapshot in LTR mode 1`] = `
<div>
  <div
    dir="ltr"
  >
    <div
      class="space-y-4"
      dir="auto"
    >
      <div
        class="flex items-center justify-between"
      >
        <div>
          <h2
            class="text-lg font-semibold text-foreground"
          >
            title
          </h2>
          <p
            class="text-sm text-muted-foreground"
          >
            prescribedBy {"name":"Dr. Ahmad"}
          </p>
        </div>
        <div
          class="flex gap-2"
        >
          <button
            class="group/button inline-flex shrink-0 items-center justify-center rounded-full border border-transparent bg-clip-padding text-sm font-medium whitespace-nowrap transition-all outline-none select-none focus-visible:border-ring focus-visible:ring-2 focus-visible:ring-ring/30 active:not-aria-[haspopup]:translate-y-px disabled:pointer-events-none disabled:opacity-50 aria-invalid:border-destructive aria-invalid:ring-2 aria-invalid:ring-destructive/20 [&_svg]:pointer-events-none [&_svg]:shrink-0 [&_svg:not([class*='size-'])]:size-4 bg-secondary text-secondary-foreground hover:bg-secondary/80 h-9 gap-1.5 px-4 [@media(pointer:coarse)]:min-h-11"
            data-size="default"
            data-slot="button"
            data-testid="select-all-btn"
            data-variant="secondary"
            type="button"
          >
            selectAll
          </button>
          <button
            class="group/button inline-flex shrink-0 items-center justify-center rounded-full border border-transparent bg-clip-padding text-sm font-medium whitespace-nowrap transition-all outline-none select-none focus-visible:border-ring focus-visible:ring-2 focus-visible:ring-ring/30 active:not-aria-[haspopup]:translate-y-px disabled:pointer-events-none disabled:opacity-50 aria-invalid:border-destructive aria-invalid:ring-2 aria-invalid:ring-destructive/20 [&_svg]:pointer-events-none [&_svg]:shrink-0 [&_svg:not([class*='size-'])]:size-4 bg-secondary text-secondary-foreground hover:bg-secondary/80 h-9 gap-1.5 px-4 [@media(pointer:coarse)]:min-h-11"
            data-size="default"
            data-slot="button"
            data-testid="deselect-all-btn"
            data-variant="secondary"
            type="button"
          >
            deselectAll
          </button>
        </div>
      </div>
      <div
        aria-live="polite"
        class="rounded-xl bg-muted/70 backdrop-blur-md p-5 shadow-card ring-[0.65px] ring-border"
        data-banner-state="nka"
        data-testid="allergy-banner"
        role="alert"
      >
        <div
          class="flex items-center gap-2"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-circle-check text-muted-foreground shrink-0"
            fill="none"
            height="20"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="20"
            xmlns="http://www.w3.org/2000/svg"
          >
            <circle
              cx="12"
              cy="12"
              r="10"
            />
            <path
              d="m9 12 2 2 4-4"
            />
          </svg>
          <span
            class="text-sm font-semibold text-muted-foreground"
          >
            No Known Allergies (NKA)
          </span>
        </div>
      </div>
      <ul
        class="space-y-3"
        role="list"
      >
        <li
          class="rounded-2xl border p-4 transition-colors border-primary-300 bg-primary-50/50"
        >
          <div
            class="flex items-start gap-3"
          >
            <input
              aria-label="Fulfill Amoxicillin"
              checked=""
              class="mt-1 h-5 w-5 rounded border-border text-primary-600 focus:ring-primary-500"
              data-testid="fulfill-checkbox-rx-001"
              type="checkbox"
            />
            <div
              class="min-w-0 flex-1"
            >
              <p
                class="font-medium text-foreground"
              >
                Amoxicillin 500mg Capsule
              </p>
              <p
                class="text-sm text-muted-foreground"
              >
                1
                 
                capsule
                <span>
                   · 
                  3× daily
                </span>
                <span>
                   · 
                  7
                   days
                </span>
              </p>
              <div
                class="mt-3 space-y-2"
              >
                <div
                  class="grid grid-cols-2 gap-3"
                >
                  <div>
                    <label
                      class="mb-1 block text-xs font-medium text-muted-foreground"
                      for="brand-rx-001"
                    >
                      brandName
                    </label>
                    <input
                      class="w-full rounded-md border border-border px-3 py-2 text-sm placeholder:text-muted-foreground focus:border-primary-500 focus:outline-none focus:ring-1 focus:ring-primary-500"
                      data-testid="brand-freetext"
                      placeholder="Brand name"
                      type="text"
                      value=""
                    />
                  </div>
                  <div>
                    <label
                      class="mb-1 block text-xs font-medium text-muted-foreground"
                      for="batch-rx-001"
                    >
                      batchLot
                       
                      <span
                        class="text-muted-foreground"
                      >
                        batchOptional
                      </span>
                    </label>
                    <input
                      class="w-full rounded-md border border-border px-3 py-2 text-sm placeholder:text-muted-foreground focus:border-primary-500 focus:outline-none focus:ring-1 focus:ring-primary-500"
                      data-testid="batch-input-rx-001"
                      id="batch-rx-001"
                      placeholder="batchPlaceholder"
                      type="text"
                      value=""
                    />
                  </div>
                </div>
              </div>
            </div>
          </div>
        </li>
        <li
          class="rounded-2xl border p-4 transition-colors border-primary-300 bg-primary-50/50"
        >
          <div
            class="flex items-start gap-3"
          >
            <input
              aria-label="Fulfill Ibuprofen"
              checked=""
              class="mt-1 h-5 w-5 rounded border-border text-primary-600 focus:ring-primary-500"
              data-testid="fulfill-checkbox-rx-002"
              type="checkbox"
            />
            <div
              class="min-w-0 flex-1"
            >
              <p
                class="font-medium text-foreground"
              >
                Ibuprofen 400mg Tablet
              </p>
              <p
                class="text-sm text-muted-foreground"
              >
                1
                 
                tablet
                <span>
                   · 
                  2× daily
                </span>
                <span>
                   · 
                  5
                   days
                </span>
              </p>
              <div
                class="mt-3 space-y-2"
              >
                <div
                  class="grid grid-cols-2 gap-3"
                >
                  <div>
                    <label
                      class="mb-1 block text-xs font-medium text-muted-foreground"
                      for="brand-rx-002"
                    >
                      brandName
                    </label>
                    <input
                      class="w-full rounded-md border border-border px-3 py-2 text-sm placeholder:text-muted-foreground focus:border-primary-500 focus:outline-none focus:ring-1 focus:ring-primary-500"
                      data-testid="brand-freetext"
                      placeholder="Brand name"
                      type="text"
                      value=""
                    />
                  </div>
                  <div>
                    <label
                      class="mb-1 block text-xs font-medium text-muted-foreground"
                      for="batch-rx-002"
                    >
                      batchLot
                       
                      <span
                        class="text-muted-foreground"
                      >
                        batchOptional
                      </span>
                    </label>
                    <input
                      class="w-full rounded-md border border-border px-3 py-2 text-sm placeholder:text-muted-foreground focus:border-primary-500 focus:outline-none focus:ring-1 focus:ring-primary-500"
                      data-testid="batch-input-rx-002"
                      id="batch-rx-002"
                      placeholder="batchPlaceholder"
                      type="text"
                      value=""
                    />
                  </div>
                </div>
              </div>
            </div>
          </div>
        </li>
      </ul>
      <button
        class="group/button inline-flex shrink-0 items-center justify-center rounded-full border border-transparent bg-clip-padding text-sm font-medium whitespace-nowrap transition-all outline-none select-none focus-visible:border-ring focus-visible:ring-2 focus-visible:ring-ring/30 active:not-aria-[haspopup]:translate-y-px disabled:pointer-events-none disabled:opacity-50 aria-invalid:border-destructive aria-invalid:ring-2 aria-invalid:ring-destructive/20 [&_svg]:pointer-events-none [&_svg]:shrink-0 [&_svg:not([class*='size-'])]:size-4 bg-primary text-primary-foreground hover:bg-primary/80 h-9 gap-1.5 px-4 [@media(pointer:coarse)]:min-h-11 w-full"
        data-size="default"
        data-slot="button"
        data-testid="confirm-dispensing-btn"
        data-variant="default"
        type="button"
      >
        confirmDispensing
      </button>
    </div>
  </div>
</div>
`;

exports[`FulfillmentChecklist > RTL snapshot tests > matches snapshot in RTL mode 1`] = `
<div>
  <div
    dir="rtl"
  >
    <div
      class="space-y-4"
      dir="auto"
    >
      <div
        class="flex items-center justify-between"
      >
        <div>
          <h2
            class="text-lg font-semibold text-foreground"
          >
            title
          </h2>
          <p
            class="text-sm text-muted-foreground"
          >
            prescribedBy {"name":"Dr. Ahmad"}
          </p>
        </div>
        <div
          class="flex gap-2"
        >
          <button
            class="group/button inline-flex shrink-0 items-center justify-center rounded-full border border-transparent bg-clip-padding text-sm font-medium whitespace-nowrap transition-all outline-none select-none focus-visible:border-ring focus-visible:ring-2 focus-visible:ring-ring/30 active:not-aria-[haspopup]:translate-y-px disabled:pointer-events-none disabled:opacity-50 aria-invalid:border-destructive aria-invalid:ring-2 aria-invalid:ring-destructive/20 [&_svg]:pointer-events-none [&_svg]:shrink-0 [&_svg:not([class*='size-'])]:size-4 bg-secondary text-secondary-foreground hover:bg-secondary/80 h-9 gap-1.5 px-4 [@media(pointer:coarse)]:min-h-11"
            data-size="default"
            data-slot="button"
            data-testid="select-all-btn"
            data-variant="secondary"
            type="button"
          >
            selectAll
          </button>
          <button
            class="group/button inline-flex shrink-0 items-center justify-center rounded-full border border-transparent bg-clip-padding text-sm font-medium whitespace-nowrap transition-all outline-none select-none focus-visible:border-ring focus-visible:ring-2 focus-visible:ring-ring/30 active:not-aria-[haspopup]:translate-y-px disabled:pointer-events-none disabled:opacity-50 aria-invalid:border-destructive aria-invalid:ring-2 aria-invalid:ring-destructive/20 [&_svg]:pointer-events-none [&_svg]:shrink-0 [&_svg:not([class*='size-'])]:size-4 bg-secondary text-secondary-foreground hover:bg-secondary/80 h-9 gap-1.5 px-4 [@media(pointer:coarse)]:min-h-11"
            data-size="default"
            data-slot="button"
            data-testid="deselect-all-btn"
            data-variant="secondary"
            type="button"
          >
            deselectAll
          </button>
        </div>
      </div>
      <div
        aria-live="polite"
        class="rounded-xl bg-muted/70 backdrop-blur-md p-5 shadow-card ring-[0.65px] ring-border"
        data-banner-state="nka"
        data-testid="allergy-banner"
        role="alert"
      >
        <div
          class="flex items-center gap-2"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-circle-check text-muted-foreground shrink-0"
            fill="none"
            height="20"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="20"
            xmlns="http://www.w3.org/2000/svg"
          >
            <circle
              cx="12"
              cy="12"
              r="10"
            />
            <path
              d="m9 12 2 2 4-4"
            />
          </svg>
          <span
            class="text-sm font-semibold text-muted-foreground"
          >
            No Known Allergies (NKA)
          </span>
        </div>
      </div>
      <ul
        class="space-y-3"
        role="list"
      >
        <li
          class="rounded-2xl border p-4 transition-colors border-primary-300 bg-primary-50/50"
        >
          <div
            class="flex items-start gap-3"
          >
            <input
              aria-label="Fulfill Amoxicillin"
              checked=""
              class="mt-1 h-5 w-5 rounded border-border text-primary-600 focus:ring-primary-500"
              data-testid="fulfill-checkbox-rx-001"
              type="checkbox"
            />
            <div
              class="min-w-0 flex-1"
            >
              <p
                class="font-medium text-foreground"
              >
                Amoxicillin 500mg Capsule
              </p>
              <p
                class="text-sm text-muted-foreground"
              >
                1
                 
                capsule
                <span>
                   · 
                  3× daily
                </span>
                <span>
                   · 
                  7
                   days
                </span>
              </p>
              <div
                class="mt-3 space-y-2"
              >
                <div
                  class="grid grid-cols-2 gap-3"
                >
                  <div>
                    <label
                      class="mb-1 block text-xs font-medium text-muted-foreground"
                      for="brand-rx-001"
                    >
                      brandName
                    </label>
                    <input
                      class="w-full rounded-md border border-border px-3 py-2 text-sm placeholder:text-muted-foreground focus:border-primary-500 focus:outline-none focus:ring-1 focus:ring-primary-500"
                      data-testid="brand-freetext"
                      placeholder="Brand name"
                      type="text"
                      value=""
                    />
                  </div>
                  <div>
                    <label
                      class="mb-1 block text-xs font-medium text-muted-foreground"
                      for="batch-rx-001"
                    >
                      batchLot
                       
                      <span
                        class="text-muted-foreground"
                      >
                        batchOptional
                      </span>
                    </label>
                    <input
                      class="w-full rounded-md border border-border px-3 py-2 text-sm placeholder:text-muted-foreground focus:border-primary-500 focus:outline-none focus:ring-1 focus:ring-primary-500"
                      data-testid="batch-input-rx-001"
                      id="batch-rx-001"
                      placeholder="batchPlaceholder"
                      type="text"
                      value=""
                    />
                  </div>
                </div>
              </div>
            </div>
          </div>
        </li>
        <li
          class="rounded-2xl border p-4 transition-colors border-primary-300 bg-primary-50/50"
        >
          <div
            class="flex items-start gap-3"
          >
            <input
              aria-label="Fulfill Ibuprofen"
              checked=""
              class="mt-1 h-5 w-5 rounded border-border text-primary-600 focus:ring-primary-500"
              data-testid="fulfill-checkbox-rx-002"
              type="checkbox"
            />
            <div
              class="min-w-0 flex-1"
            >
              <p
                class="font-medium text-foreground"
              >
                Ibuprofen 400mg Tablet
              </p>
              <p
                class="text-sm text-muted-foreground"
              >
                1
                 
                tablet
                <span>
                   · 
                  2× daily
                </span>
                <span>
                   · 
                  5
                   days
                </span>
              </p>
              <div
                class="mt-3 space-y-2"
              >
                <div
                  class="grid grid-cols-2 gap-3"
                >
                  <div>
                    <label
                      class="mb-1 block text-xs font-medium text-muted-foreground"
                      for="brand-rx-002"
                    >
                      brandName
                    </label>
                    <input
                      class="w-full rounded-md border border-border px-3 py-2 text-sm placeholder:text-muted-foreground focus:border-primary-500 focus:outline-none focus:ring-1 focus:ring-primary-500"
                      data-testid="brand-freetext"
                      placeholder="Brand name"
                      type="text"
                      value=""
                    />
                  </div>
                  <div>
                    <label
                      class="mb-1 block text-xs font-medium text-muted-foreground"
                      for="batch-rx-002"
                    >
                      batchLot
                       
                      <span
                        class="text-muted-foreground"
                      >
                        batchOptional
                      </span>
                    </label>
                    <input
                      class="w-full rounded-md border border-border px-3 py-2 text-sm placeholder:text-muted-foreground focus:border-primary-500 focus:outline-none focus:ring-1 focus:ring-primary-500"
                      data-testid="batch-input-rx-002"
                      id="batch-rx-002"
                      placeholder="batchPlaceholder"
                      type="text"
                      value=""
                    />
                  </div>
                </div>
              </div>
            </div>
          </div>
        </li>
      </ul>
      <button
        class="group/button inline-flex shrink-0 items-center justify-center rounded-full border border-transparent bg-clip-padding text-sm font-medium whitespace-nowrap transition-all outline-none select-none focus-visible:border-ring focus-visible:ring-2 focus-visible:ring-ring/30 active:not-aria-[haspopup]:translate-y-px disabled:pointer-events-none disabled:opacity-50 aria-invalid:border-destructive aria-invalid:ring-2 aria-invalid:ring-destructive/20 [&_svg]:pointer-events-none [&_svg]:shrink-0 [&_svg:not([class*='size-'])]:size-4 bg-primary text-primary-foreground hover:bg-primary/80 h-9 gap-1.5 px-4 [@media(pointer:coarse)]:min-h-11 w-full"
        data-size="default"
        data-slot="button"
        data-testid="confirm-dispensing-btn"
        data-variant="default"
        type="button"
      >
        confirmDispensing
      </button>
    </div>
  </div>
</div>
`;
